fix encode error
