# sub/panel/schemas.py
@@ -32,7 +32,7 @@ DefinitionsPost = {'properties': {'account': DefinitionsAccount, 'description': 
 DefinitionsPostlite = {'properties': {'account': DefinitionsAccount, 'description': {'type': 'string'}, 'is_sticky': {'type': 'boolean'}, 'title': {'type': 'string'}, 'review_status': {'type': 'string'}, 'date_published': DefinitionsDatetime, 'is_hidden': {'type': 'boolean'}, 'id': {'type': 'string'}}}
 DefinitionsColumnlite = {'properties': {'status': {'type': 'string'}, 'account': DefinitionsAccount, 'name': {'type': 'string'}, 'date_created': DefinitionsDatetime, 'price': {'type': 'integer'}, 'subscribes_count': {'type': 'integer', 'format': 'int32'}, 'id': {'type': 'string'}}}
 DefinitionsUpdatecolumn = {'properties': {'status': {'enum': ['draft', 'published'], 'type': 'string'}, 'name': {'type': 'string'}, 'image': {'type': 'string'}, 'date_start': DefinitionsDatetime, 'content': {'type': 'string'}, 'is_hidden': {'type': 'boolean'}, 'price': {'type': 'integer'}, 'date_end': DefinitionsDatetime}}
-DefinitionsColumn = {'properties': {'status': {'type': 'string'}, 'account': DefinitionsAccount, 'views_count': {'type': 'integer', 'format': 'int32'}, 'price': {'type': 'integer'}, 'date_start': DefinitionsDatetime, 'id': {'type': 'string'}, 'content': {'type': 'string'}, 'date_created': DefinitionsDatetime, 'is_hidden': {'type': 'boolean'}, 'voice': DefinitionsVoice, 'date_end': DefinitionsDatetime, 'name': {'type': 'string'}}}
+DefinitionsColumn = {'properties': {'status': {'type': 'string'}, 'account': DefinitionsAccount, 'name': {'type': 'string'}, 'price': {'type': 'integer'}, 'date_start': DefinitionsDatetime, 'id': {'type': 'string'}, 'content': {'type': 'string'}, 'date_created': DefinitionsDatetime, 'is_hidden': {'type': 'boolean'}, 'subscribes_count': {'type': 'integer', 'format': 'int32'}, 'date_end': DefinitionsDatetime}}
 DefinitionsReplylite = {'properties': {'content': {'type': 'string'}, 'date_published': DefinitionsDatetime, 'account': DefinitionsAccount, 'is_sticky': {'type': 'boolean'}, 'is_hidden': {'type': 'boolean'}, 'review_status': {'type': 'string'}, 'id': {'type': 'string'}}}
 
 validators = {
